# aras-py

./: .gitignore  Containerfile  Containerfile.s3  LICENSE  README.md  default.env  pyproject.toml
.github/workflows/: oci-publish.yaml
aras_py/: datastructures.py  run.py
tests/: test_run.py
