[tool.poetry]
name = "aras-py"
version = "0.1.0"
description = ""
license = "GPL-v3.0+"
authors = ["Natanael Arndt <arndtn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.8"
httpx = "^0.28.1"
loguru = "^0.7.2"
to-file-like-obj = "^0.0.6"
rich = "^13.7.1"
lxml = "^5.2.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pytest = "^8.3.2"
respx = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aras-py = "aras_py.run:cli"
