[tool.poetry]
name = "aras-py"
version = "0.1.0"
description = ""
license = "GPL-v3.0+"
authors = ["Natanael Arndt <arndtn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.8"
httpx = "^0.28.1"
loguru = "^0.7.2"
to-file-like-obj = "^0.0.7"
rich = "^15.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.13"
pytest = "^9.0.3"
respx = "^0.23.1"

[tool.poetry.group.s3]
optional = true

[tool.poetry.group.s3.dependencies]
s3fs = "^2026.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aras-py = "aras_py.run:cli"
